--- a/about.Rmd
+++ b/about.Rmd
@@ -1,10 +1,9 @@
 ---
 title: "About this site"
-description: |
+description: 
   Some additional details about the website
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE)
-```
+This is my about page
 
+![](IMG_2031.jpg){width="100"}
